Fix - allow buttons for urban area cards to wrap so that they are not forcing a minimum width for the whole card

--- a/src/styles/sections/card_city.scss
+++ b/src/styles/sections/card_city.scss
@@ -40,6 +40,7 @@
     .urban-area-buttons {
         width: 100%;
         display: flex;
+        flex-wrap: wrap;
         justify-content: center;
         gap: var(--space-m);
     }
